--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,11 @@ node_modules
 # testing
 coverage
 
-# next.js
+# artifacts
 .next/
 out/
 build
+dist
 
 # misc
 .DS_Store
@@ -28,6 +29,9 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# development
+.cache
 
 # turbo
 .turbo
