--- a/packages/package-b/package.json
+++ b/packages/package-b/package.json
@@ -1,14 +1,16 @@
 {
-    "name": "ui",
+    "name": "package-b",
     "version": "0.0.0",
-    "main": "./index.tsx",
-    "types": "./index.tsx",
     "license": "MIT",
+    "scripts": {
+        "serve": "esbuild --bundle index.ts --outfile=www/index.js --servedir=www"
+    },
     "devDependencies": {
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
-        "tsconfig": "*",
         "config": "*",
+        "esbuild": "^0.14.25",
+        "tsconfig": "*",
         "typescript": "^4.5.3"
     }
 }
