--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -3,13 +3,15 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --port 3001",
+        "serve": "next dev --port 3001",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
     "dependencies": {
         "next": "12.0.8",
+        "package-a": "*",
+        "package-b": "*",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "ui": "*"
