--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -4,11 +4,15 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "serve": "parcel index.html watch"
+        "serve": "parcel index.html --open"
     },
     "keywords": [],
     "author": "Brad Garropy",
     "license": "ISC",
+    "dependencies": {
+        "package-a": "*",
+        "package-b": "*"
+    },
     "devDependencies": {
         "parcel-bundler": "^1.12.5"
     }
